Fix flickering when sticking jump to element.

--- a/client/styles/docs.styl
+++ b/client/styles/docs.styl
@@ -768,6 +768,9 @@ body
   color $color-text
   min-height 200px
 
+  +breakpoint("desktop", "max")
+    margin-top 30px
+
   pre code a,
   pre code a span
     color: white !important;
