--- a/client/styles/inc/sidebar.styl
+++ b/client/styles/inc/sidebar.styl
@@ -111,6 +111,7 @@ body.overflow-hidden
     +breakpoint("desktop", "max")
       height 60px
       overflow-y hidden
+      margin-bottom 0
 
       &.is-dropdown-open
         // Set the height to match the total viewport height minus the jumpt to top position
